[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statprocon"
version = "0.0.8"
authors = [
  { name="Matt McCormick", email="mattmccor@gmail.com" },
]
description = "A Python helper library for generating Process Behaviour Charts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Statistical Process Control", "SPC", "Quality Control Chart", "QCC", "Process Behaviour Chart", "Process Behavior Chart", "XmR", "Shewhart", "Wheeler"]

[project.urls]
"Homepage" = "https://github.com/mattmccormick/statprocon"
"Bug Tracker" = "https://github.com/mattmccormick/statprocon/issues"
"Changelog" = "https://github.com/mattmccormick/statprocon/blob/main/CHANGELOG.md"
